tests/http/requests/invalid/016.py
from web_server.errors import InvalidRequestLine

request = InvalidRequestLine
